# Empirica

./: .gitignore  INSTALL_CMBAGENT.md  LICENSE  README.md  compose.yaml  mkdocs.yml  pyproject.toml  test_first_time_user.py
docker/: Dockerfile.dev  Dockerfile.prod
docs/: app.md  docker.md  get_started.md  install.md  prompts.md  troubleshooting.md
docs/api_ref/: api_classes.md  api_empirica.md  api_journals.md  api_llms.md  api_paper.md  api_utils.md
docs/examples/: enhance_input.ipynb  research_idea.ipynb  write_paper.ipynb
docs/llm_api_keys/: apikeys.md  cost.md  obtaining-api-keys.md  storing-api-keys.md  vertex-ai-setup.md
docs/tutorials/: tut_end2end.md  tut_gui.md  tut_install.md  tut_llm_api.md
empirica/: __init__.py  cli.py  config.py  empirica.py  exceptions.py  experiment.py  idea.py  logger.py  method.py  utils.py
empirica/knowledge_graph/: __init__.py  extractor.py  models.py  query.py  storage.py
empirica/langgraph_agents/: agents_graph.py  idea.py  literature.py  methods.py  referee.py
empirica/meta_learning/: __init__.py  agent.py  analyzer.py  models.py
empirica/paper_agents/: agents_graph.py  latex.py  paper_node.py  prompts.py  reader.py  tools.py
empirica/reproducibility/: __init__.py  checkpoints.py  provenance.py  reproducer.py  versioning.py
empirica/suggestions/: __init__.py  display.py  engine.py  integration.py
examples/: enhance_input.ipynb  full_workflow.py  get_keywords.ipynb  idea_check.ipynb  oscillator_full_run.ipynb  research_idea.ipynb  write_paper.ipynb
tests/: README.md  conftest.py
tests/fixtures/: sample_research.json
tests/test_e2e/: test_full_workflow.py  test_knowledge_graph_workflow.py
tests/test_integration/: test_knowledge_graph_integration.py  test_reproducibility_integration.py  test_suggestions_integration.py
tests/test_unit/: test_analyzer.py  test_checkpoints.py  test_extractor.py  test_meta_models.py  test_models.py  test_provenance.py  test_query.py  test_storage.py  test_suggestions.py  test_versioning.py
